--- a/PRA PIS/App.config
+++ b/PRA PIS/App.config
@@ -9,13 +9,13 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="PRA_PIS.My.MySettings.PRAMasterDBConnString" connectionString="Data Source=192.168.55.17\SQLPRALOCAL;Initial Catalog=PRAMASTERDATABASE;Persist Security Info=True;User ID=sa;Password=pr@@dm1n2017507"
+        <add name="PRA_PIS.My.MySettings.PRAMasterDBConnString" connectionString="Data Source=159.138.157.165;Initial Catalog=PRAMASTERDATABASE;Persist Security Info=True;User ID=sa;Password=br@@dW1u2019507_sa"
             providerName="System.Data.SqlClient" />
         <add name="PRA_PIS.My.MySettings.PRA_PROPERTYDBConnectionString"
-            connectionString="Data Source=192.168.55.17\SQLPRALOCAL;Initial Catalog=PRA_PROPERTYDB;Persist Security Info=True;User ID=sa;Password=pr@@dm1n2017507&#xA;"
+            connectionString="Data Source=159.138.157.165;Initial Catalog=PRA_PROPERTYDB;Persist Security Info=True;User ID=sa;Password=br@@dW1u2019507_sa"
             providerName="System.Data.SqlClient" />
         <add name="PRA_PIS.My.MySettings.PRAJO_DATABASEConnectionString"
-            connectionString="Data Source=192.168.55.17\SQLPRALOCAL;Initial Catalog=PRAJO_DATABASE;Persist Security Info=True;User ID=sa;Password=pr@@dm1n2017507"
+            connectionString="Data Source=159.138.157.165;Initial Catalog=PRAJO_DATABASE;Persist Security Info=True;User ID=sa;Password=br@@dW1u2019507_sa"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup useLegacyV2RuntimeActivationPolicy="true">
